--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    
     "dev": "nodemon api/server.js",
-		"build": "npm install && npm install --prefix client && npm run build --prefix client",
+    "build": "vite build",
 		"start": "node api/server.js"
   },
   "keywords": [],
